...
    "Buy %@" : {

    },
    "Buy 5 Games — $0.99" : {

    },
    "Cancel" : {
      "comment" : "Cancel button text",
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "被吃棋子"
          }
        }
      }
    },
    "Change Skill Level?" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Schwierigkeitsgrad ändern?"
          }
...
            "state" : "translated",
            "value" : "连接测试"
          }
        }
      }
    },
    "Continue as Guest" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Als Gast fortfahren"
          }
...
            "state" : "translated",
            "value" : "重置"
          }
        }
      }
    },
    "Reset & Change" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zurücksetzen & Ändern"
          }
...
