...
extension ChessGameState {
    @MainActor static let sampleState = {
        let state = ChessGameState()
        state.currentMoveFeedback = MoveFeedback(
            moveNo: 1,
            side: "white",
            san: "e4",
            uci: "e2e4",
            fenBefore: "rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1",
            fenAfter: nil,
            cpBefore: 0,
            cpAfter: 25,
            cpLoss: 0.0,
...
